--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "./node_modules/.bin/nodemon -L ./bin/www"
+    "dev": "./node_modules/.bin/nodemon -L ./bin/www",
+    "reset": "node ./db/reset.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
