--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,20 +1,33 @@
 {
-  "name": "frontend",
+  "name": "rebu",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
-    "sass": "^1.43.4",
-    "web-vitals": "^1.1.2"
+    "@reach/combobox": "^0.12.1",
+    "@react-google-maps/api": "^2.1.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
+    "moment": "^2.29.1",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
+    "react-dom": "^17.0.1",
+    "react-geocode": "^0.2.2",
+    "react-icons": "^4.1.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.1",
+    "react-scroll-to-bottom": "^4.1.0",
+    "react-spring": "^8.0.27",
+    "sass": "^1.32.4",
+    "socket.io-client": "^3.1.0",
+    "use-places-autocomplete": "^1.7.1",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start  --watch --watch-poll ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
