--- a/backend/package.json
+++ b/backend/package.json
@@ -3,29 +3,32 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node ./db/reset.js && node ./bin/www",
     "dev": "./node_modules/.bin/nodemon -L ./bin/www",
     "db:reset": "node ./db/reset.js"
   },
+  "engines": {
+    "node": "10.16.1"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "chalk": "^3.0.0",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.6.0",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "pg": "^8.5.1",
     "pg-native": "^3.0.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.9",
     "socket.io": "^3.1.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "nodemon": "^2.0.7"
   }
 }
